image-converter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-converter
  namespace: minerva
spec:
  selector:
    matchLabels:
      app: image-converter
  replicas: 1
  template:
    metadata:
      labels:
        app: image-converter
    spec:
      containers:
        - name: image-converter
          image: registry.mdcatapult.io/informatics/software-engineering/mdc-minerva-image-converter:task-mdcp0260-36-image-conversion-web-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: 8080tcp2
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/data-volume
              name: data
      imagePullSecrets:
        - name: gitlab-registry
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minerva-author-nfs-volume
---
apiVersion: v1
kind: Service
metadata:
  name: image-converter-service
  namespace: minerva
  labels:
    app: image-converter-service
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: image-converter
